src/assets/css/style.css
/* ... */
/* Post Images */
.article__preview .attachment-post-thumbnail {
	width:100%;
}

.article .alignnone {
	margin-top: 0;
	margin-right: var(--dkuk-small-size);
	margin-bottom: var(--dkuk-small-size);
	margin-left: 0;
}

.article .alignright {
    float: right;
	margin-top: 0;
	margin-right: 0;
	margin-bottom: var(--dkuk-small-size);
	margin-left: var(--dkuk-small-size);
}

.article .alignleft {
    float: left;
    margin-top: 0;
	margin-right: var(--dkuk-small-size);
	margin-bottom: 0;
	margin-left: var(--dkuk-small-size);
}

.article .aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
/* Ends Post Image styles */

/* Post Preview styles */
/* These use flexbox to flip the title and the thumbnail */
/* This means that in the markup it goes title > thumbnail > excerpt */
/* But that visually it goes thumbnail > title > excerpt */

.article__preview {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
	margin-bottom:var(--dkuk-medium-size);
	padding-bottom:var(--dkuk-medium-size);

	/* Break words on small boxes */
	overflow-wrap: break-word;
	word-wrap: break-word;
	-webkit-hyphens: auto;
	-ms-hyphens: auto;
	hyphens: auto;
}

.article__preview .article__header {
	margin-top: var(--dkuk-medium-size);
}

.article__preview .article__excerpt {
	margin-top: var(--dkuk-small-size);
}

.article__preview .article__title {
	margin-bottom: 0;
}

.article__preview .thumbnail__link {
    -webkit-box-ordinal-group: 0;
        -ms-flex-order: -1;
            order: -1;
}

/* Exhibition list */
.exhibition-list__item {
	width: 100%;
	height: var(--dkuk-total-stripe);
	margin-bottom: var(--dkuk-total-stripe)
}

/* End Post Preview Styles */

/* Ends Post styles */

/* Component styles */

/* Menu Styles */

.menu {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	    flex-wrap: wrap;
	-ms-flex-pack: distribute;
	    justify-content: space-around;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	    -ms-flex-direction: column;
	        flex-direction: column;
}

/* End Menu Styles */

/* Salon ACF */

.salon {
	margin-bottom:var(--dkuk-medium-size);
}

.colours {
	margin-top:var(--dkuk-medium-size);
}

.salon__prices {
	padding-top:var(--dkuk-small-size);
	width: 100%;
	border-collapse: collapse;
}

.salon__header {
	display:none;
}

.salon__service {
	border-bottom:dashed 2px var(--dkuk-primary-colour);
	padding-top:var(--dkuk-small-size);
	width:70%;
}

.colours__smallprint {
	display: block;
	margin-top:var(--dkuk-small-size);
}

/* Ends Salon ACF */

/* Podcast ACF */
.podcast__title {
    display: none;
}

.podcast__file {
    width: 100%;
    margin-bottom: var(--dkuk-small-size);
}

.podcast__link {
	display: block;
    margin-bottom: var(--dkuk-small-size);
}
/* Ends Podcast ACF */

/* Flickity Image Gallery */

.gallery {
	margin-bottom: var(--dkuk-medium-size);
}

.flickity-slider {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.gallery__item {
	width: 100%;
}

.gallery__caption {
	font-size: var(--dkuk-smallest-size);
	padding-top: var(--dkuk-smallest-size);
	padding-right: var(--dkuk-smallest-size);
	padding-bottom: var(--dkuk-smallest-size);
	padding-left: var(--dkuk-smallest-size);
}
/* Ends Flickity styles */

.pagination, .view-more {
	padding-top: var(--dkuk-total-stripe);
}

.view-more {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
}

.view-more__button {
	cursor: pointer;
	font-family: 'WorkSansBold', sans-serif;
	font-size: var(--dkuk-medium-size);
	font-weight: bold;
	text-transform: uppercase;
	background-color: var(--dkuk-primary-colour);
	border: none;
	min-height: var(--dkuk-total-stripe);
	padding-top: var(--dkuk-smallest-size);
	padding-bottom: var(--dkuk-smallest-size);
	padding-left: var(--dkuk-medium-size);
	padding-right: var(--dkuk-medium-size);
	color: var(--dkuk-secondary-colour);
}

/* Ends Component styles */

/* Footer styles */

.footer__container {
	background-color: var(--dkuk-primary-colour);
	color:var(--dkuk-secondary-colour);
	padding-bottom: var(--dkuk-small-size);
}

/* Footer Nav */

.footer__nav {
		margin-top: var(--dkuk-smallest-size);
}

.footer__nav .menu {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
}

/* Footer Nav */
.footer__nav .menu-item a {
    text-decoration: underline;
}

.footer__nav .menu-item:not(:last-child) {
	margin-bottom: var(--dkuk-smallest-size);
}

/* Footer Sidebar */

.footer__widget {
	margin-top: var(--dkuk-smallest-size);
}

.footer__widget ul {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	    -ms-flex-direction: row;
	        flex-direction: row;
	-ms-flex-pack: distribute;
	    justify-content: space-around;
}

.footer__widget ul li a {
	font-size: var(--dkuk-medium-size);
	text-decoration: none;
}

.footer p {
	font-size:var(--dkuk-smallest-size)
}

.footer p:not(:last-child) {
	margin-bottom: var(--dkuk-smallest-size)
}

/* Ends Footer Nav Styles */

/* Ends Footer styles */

/* Media Queries */
/* My tendency is to construct media queries on content not on design. */
/* Have three different sizes given three columns */
/* The media queries use these values to match the flexbox ones, usually I'd move from narrow up to wide, not from wide down to narrow */
@media (max-width: 64em)  {
	/* Two columns on medium screens */
	.grid__sizer, .grid__item {
		width: 49%;
	}
	.grid__gutter-sizer {
		width:2%;
	}
	.footer__nav .menu-item {
    	min-width: 49%;
	}
}
/* ... */

